Adding German translation.

--- a/VidCoder/Resources/EncodingRes.eu.resx
+++ b/VidCoder/Resources/EncodingRes.eu.resx
@@ -216,7 +216,7 @@ Geh. B-frameak 1 baino handiagoa behar du; B-frame egokigarri hoberena oso gomen
 
 Gehiago gehitzen baduzu, konpresioa hobea izango da, baina kodeaketa astiroagoa.
 
-Cel animazioak xehetasun frame gehiagotik onura ateratzeko joera du, fima edukiek baino askoz gehiago.
+Cel animazioak xehetasun frame gehiagotik onura ateratzeko joera du, filma edukiek baino askoz gehiago.
 
 Ohartu hardware gailu askok mugak dituztela sostengatzen dituzten xehetasun frametan, hortaz irakurgailu eramangarri edo aske baterako kodeatzen ari bazara, ez ikutu hau zer egiten ari zaren erabat zihur ez bazaude!</value>
   </data>
