--- a/VidCoder/Resources/CommonRes.de.resx
+++ b/VidCoder/Resources/CommonRes.de.resx
@@ -118,80 +118,84 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AboutLicense" xml:space="preserve">
-    <value>Este programa é um software livre; você pode redistribuí-lo e/ou modificá-lo de acordo com os termos da Licença Pública Geral do GNU, tal como publicada pela Free Software Foundation; versão 2 da licença, ou ainda (à sua escolha) qualquer versão posterior.  Este programa é distribuído na esperança de que ele seja útil, mas SEM NENHUMA GARANTIA; sem mesmo a garantia implícita de COMERCIALIZAÇÃO ou de ADAPTAÇÃO A UM OBJECTO PARTICULAR. Para mais detalhes, consulte a Licença Pública Geral do GNU. Um exemplar da Licença Pública Geral do GNU foi incluída neste programa.</value>
+    <value>Dieses Programm ist freie Software; Sie können sie unter den Bedingungen der GNU General Public License weiterverteilen und/oder modifizieren, wie von der Free Software Foundation veröffentlicht; entweder gemäß Version 2 der Lizenz oder (nach Ihrer Option) jeder späteren Version. 
+
+Dieses Programm wird verteilt, in der Hoffnung, dass es nützlich ist, aber OHNE JEDE GARANTIE; ohne die angedeuteten Garantien der MARKTGÄNGIGKEIT oder EIGNUNG FÜR EINEN BESTIMMTEN ZWECK. Sehen Sie sich die GNU General Public License für weitere Details an.
+
+Diesem Programm wurde eine vollständige Kopie der GNU General Public beigelegt.</value>
   </data>
   <data name="BurnedSubtitleToolTip" xml:space="preserve">
-    <value>Gravar as legendas na imagem. Com legendas gravadas, não poderá desactivá-las durante a reprodução.</value>
+    <value>Untertitel fest in das Video encoden. Feste Untertitel können nicht abgeschaltet werden.</value>
   </data>
   <data name="DefaultSubtitleToolTip" xml:space="preserve">
-    <value>Marca esta faixa de legendas como predefinida. Isto fará com esta faixa seja exibida durante a reprodução até outra faixa seja escolhida.</value>
+    <value>Untertitel als Standard markieren. Dieser wird angezeigt bis ein anderer gewählt wird.</value>
   </data>
   <data name="ForcedSubtitleToolTip" xml:space="preserve">
-    <value>Exibir apenas legendas forçadas da faixa determinada. Geralmente significa pequenos pedaços de diálogo estrangeiro.</value>
+    <value>Nur erzwungene Untertitel aus der Datei anzeigen. In der Regel enthalten diese teilweise Fremdsprachen.</value>
   </data>
   <data name="OffsetSubtitleToolTip" xml:space="preserve">
-    <value>A quantidade de tempo para avançar ou retardar o aparecimento das legendas.</value>
+    <value>Zeitspanne, um die der gewählten Untertitel vorgezogen oder verzögert angezeigt wird.</value>
   </data>
   <data name="QueueColumnNameRange" xml:space="preserve">
-    <value>Intervalo</value>
+    <value>Bereich</value>
     <comment>The label for the queue column that specifies what portion of the video to encode. (Like 25:23 - 37:50)</comment>
   </data>
   <data name="QueueColumnNameDestination" xml:space="preserve">
-    <value>Destino</value>
+    <value>Ziel</value>
   </data>
   <data name="QueueColumnNameSource" xml:space="preserve">
-    <value>Origem</value>
+    <value>Quelle</value>
   </data>
   <data name="QueueColumnNameTitle" xml:space="preserve">
-    <value>Título</value>
+    <value>Titel</value>
   </data>
   <data name="QueueColumnNameAudioQuality" xml:space="preserve">
-    <value>Qualidade do áudio</value>
+    <value>Audio Qualität</value>
   </data>
   <data name="QueueColumnNameAudioEncoder" xml:space="preserve">
-    <value>Codificador do áudio</value>
+    <value>Audio Encodierer</value>
   </data>
   <data name="QueueColumnNameVideoEncoder" xml:space="preserve">
-    <value>Codificador de vídeo</value>
+    <value>Video Encodierer</value>
   </data>
   <data name="QueueColumnNameVideoQuality" xml:space="preserve">
-    <value>Qualidade do vídeo</value>
+    <value>Video Qualität</value>
   </data>
   <data name="QueueEtaToolTip" xml:space="preserve">
-    <value>Tempo estimado para finalizar todas as tarefas.</value>
+    <value>Voraussichtliche Zeit bis zur Fertigstellung aller Jobs in der Warteschlange.</value>
   </data>
   <data name="QueueColumnNameDuration" xml:space="preserve">
-    <value>Duração</value>
+    <value>Dauer</value>
   </data>
   <data name="ForeignAudioSearchToolTip" xml:space="preserve">
-    <value>Procurar uma faixa de legenda que é susceptível de conter pedaços de diálogo estrangeiro. Bom para filmes que são principalmente na sua língua nativa.</value>
+    <value>Sucht nach Untertitel Spur, welche ausländische Dialoge enthält. Gut für Filme in Ihrer Muttersprache.</value>
   </data>
   <data name="Default" xml:space="preserve">
-    <value>Predefinição</value>
+    <value>Standard</value>
     <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
   <data name="Custom" xml:space="preserve">
-    <value>Personalizado</value>
+    <value>Benutzerdefiniert</value>
     <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
   <data name="Browse" xml:space="preserve">
-    <value>Procurar...</value>
+    <value>Durchsuchen...</value>
   </data>
   <data name="Delete" xml:space="preserve">
-    <value>Eliminar</value>
+    <value>Löschen</value>
   </data>
   <data name="PreviewLabel" xml:space="preserve">
-    <value>Pré-Visualizar</value>
+    <value>Vorschau</value>
   </data>
   <data name="Automatic" xml:space="preserve">
-    <value>Automático</value>
+    <value>Automatisch</value>
   </data>
   <data name="Off" xml:space="preserve">
-    <value>Desligado</value>
+    <value>Aus</value>
     <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
   <data name="All" xml:space="preserve">
-    <value>Todos</value>
+    <value>Alle</value>
   </data>
   <data name="StreamChoice" xml:space="preserve">
     <value>Stream {0}</value>
@@ -201,39 +205,39 @@
     <value>OK</value>
   </data>
   <data name="Cancel" xml:space="preserve">
-    <value>Cancelar</value>
+    <value>Abbrechen</value>
   </data>
   <data name="Disabled" xml:space="preserve">
-    <value>Desativado</value>
+    <value>Ausgeschaltet</value>
   </data>
   <data name="Remove" xml:space="preserve">
-    <value>Remover</value>
+    <value>Entfernen</value>
   </data>
   <data name="Copy" xml:space="preserve">
-    <value>Copiar</value>
+    <value>Kopieren</value>
   </data>
   <data name="Yes" xml:space="preserve">
-    <value>Sim</value>
+    <value>Ja</value>
   </data>
   <data name="No" xml:space="preserve">
-    <value>Não</value>
+    <value>Nein</value>
   </data>
   <data name="CouldNotAccessDirectoriesError" xml:space="preserve">
-    <value>Não foi possível aceder aos seguintes directórios:</value>
+    <value>Auf folgende Ordner kann nicht zugegriffen werden:</value>
   </data>
   <data name="None" xml:space="preserve">
-    <value>Nenhum</value>
+    <value>Keine</value>
   </data>
   <data name="Succeeded" xml:space="preserve">
-    <value>Sucesso</value>
+    <value>Erfolgreich</value>
   </data>
   <data name="Failed" xml:space="preserve">
-    <value>Falhou</value>
+    <value>Fehlgeschlagen</value>
   </data>
   <data name="FilePickerExtTemplate" xml:space="preserve">
-    <value>{0} Ficheiros</value>
+    <value>{0} Dateien</value>
   </data>
   <data name="QueueColumnNamePreset" xml:space="preserve">
-    <value>Pré-ajustes</value>
+    <value>Vorgabe</value>
   </data>
 </root>
