--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -573,4 +573,7 @@
   <data name="Preset_Xbox360" xml:space="preserve">
     <value>Xbox 360</value>
   </data>
+	<data name="RemoveFromQueueToolTip" xml:space="preserve">
+    <value>Remove from queue</value>
+  </data>
 </root>
