--- a/VidCoder/Resources/CommonRes.resx
+++ b/VidCoder/Resources/CommonRes.resx
@@ -240,4 +240,7 @@ A full copy of the GNU General Public License has been included along with this 
   <data name="QueueColumnNamePreset" xml:space="preserve">
     <value>Preset</value>
   </data>
+	<data name="Success" xml:space="preserve">
+    <value>Success</value>
+  </data>
 </root>
