--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -471,20 +471,14 @@
   <data name="PresetImportErrorMessage" xml:space="preserve">
     <value>Could not import preset. Format is unrecognized.</value>
   </data>
-  <data name="PresetImportErrorTitle" xml:space="preserve">
+  <data name="ImportErrorTitle" xml:space="preserve">
     <value>Import Error</value>
   </data>
   <data name="PresetImportSuccessMessage" xml:space="preserve">
     <value>Successfully imported preset {0}.</value>
   </data>
-  <data name="PresetImportSuccessTitle" xml:space="preserve">
-    <value>Success</value>
-  </data>
   <data name="PresetExportSuccessMessage" xml:space="preserve">
     <value>Successfully exported preset to {0}</value>
-  </data>
-  <data name="PresetExportSuccessTitle" xml:space="preserve">
-    <value>Success</value>
   </data>
   <data name="ExportPresetFilePickerText" xml:space="preserve">
     <value>Export preset</value>
@@ -573,7 +567,34 @@
   <data name="Preset_Xbox360" xml:space="preserve">
     <value>Xbox 360</value>
   </data>
-	<data name="RemoveFromQueueToolTip" xml:space="preserve">
+  <data name="RemoveFromQueueToolTip" xml:space="preserve">
     <value>Remove from queue</value>
+  </data>
+  <data name="CouldNotSaveQueueMessage" xml:space="preserve">
+    <value>Could not save queue:{0}{1}</value>
+  </data>
+  <data name="ExportQueue" xml:space="preserve">
+    <value>Export Queue...</value>
+  </data>
+  <data name="ExportQueueFilePickerText" xml:space="preserve">
+    <value>Export queue</value>
+  </data>
+	<data name="QueueImportErrorMessage" xml:space="preserve">
+    <value>Could not import queue. Format is unrecognized.</value>
+  </data>
+	<data name="ImportPresetFilePickerTitle" xml:space="preserve">
+    <value>Import preset file</value>
+  </data>
+	<data name="ImportQueueFilePickerTitle" xml:space="preserve">
+    <value>Import queue file</value>
+  </data>
+	<data name="ImportQueue" xml:space="preserve">
+    <value>Import Queue...</value>
+  </data>
+	<data name="QueueExportSuccessMessage" xml:space="preserve">
+    <value>Successfully exported queue to {0}</value>
+  </data>
+	<data name="QueueImportSuccessMessage" xml:space="preserve">
+    <value>Successfully imported queue.</value>
   </data>
 </root>
