--- a/VidCoder/Resources/LogRes.zh.resx
+++ b/VidCoder/Resources/LogRes.zh.resx
@@ -117,76 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Anamorphic_Custom" xml:space="preserve">
-    <value>Personalizado</value>
+  <data name="ClearButton" xml:space="preserve">
+    <value>清除</value>
   </data>
-  <data name="Anamorphic_Loose" xml:space="preserve">
-    <value>Loose</value>
-  </data>
-  <data name="Anamorphic_None" xml:space="preserve">
-    <value>Nenhum</value>
-  </data>
-  <data name="Anamorphic_Strict" xml:space="preserve">
-    <value>Estrito</value>
-  </data>
-  <data name="Custom" xml:space="preserve">
-    <value>Personalizado</value>
-  </data>
-  <data name="Decomb_Bob" xml:space="preserve">
-    <value>Bob</value>
-  </data>
-  <data name="Decomb_Fast" xml:space="preserve">
-    <value>Rápido</value>
-  </data>
-  <data name="Default" xml:space="preserve">
-    <value>Padrão</value>
-  </data>
-  <data name="Deinterlace_Bob" xml:space="preserve">
-    <value>Bob</value>
-  </data>
-  <data name="Deinterlace_Fast" xml:space="preserve">
-    <value>Rápido</value>
-  </data>
-  <data name="Deinterlace_Slow" xml:space="preserve">
-    <value>Lento</value>
-  </data>
-  <data name="Deinterlace_Slower" xml:space="preserve">
-    <value>Mais lento</value>
-  </data>
-  <data name="Denoise_Medium" xml:space="preserve">
-    <value>Médio</value>
-  </data>
-  <data name="Denoise_Strong" xml:space="preserve">
-    <value>Forte</value>
-  </data>
-  <data name="Denoise_Weak" xml:space="preserve">
-    <value>Fraco</value>
-  </data>
-  <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
-    <value>Não fazer nada</value>
-  </data>
-  <data name="EncodeCompleteActionType_EjectDisc" xml:space="preserve">
-    <value>Ejectar {0}:</value>
-  </data>
-  <data name="EncodeCompleteActionType_LogOff" xml:space="preserve">
-    <value>Terminar Sessão</value>
-  </data>
-  <data name="EncodeCompleteActionType_Shutdown" xml:space="preserve">
-    <value>Desligar PC</value>
-  </data>
-  <data name="EncodeCompleteActionType_Sleep" xml:space="preserve">
-    <value>Suspender PC</value>
-  </data>
-  <data name="Off" xml:space="preserve">
-    <value>Desligado</value>
-  </data>
-  <data name="VideoRangeType_Chapters" xml:space="preserve">
-    <value>Capítulos</value>
-  </data>
-  <data name="VideoRangeType_Frames" xml:space="preserve">
-    <value>Frames</value>
-  </data>
-  <data name="VideoRangeType_Seconds" xml:space="preserve">
-    <value>Intervalo de tempo</value>
+  <data name="LogWindowTitle" xml:space="preserve">
+    <value>記錄</value>
   </data>
 </root>
