--- a/VidCoder/Resources/PreviewRes.zh.resx
+++ b/VidCoder/Resources/PreviewRes.zh.resx
@@ -117,76 +117,67 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Anamorphic_Custom" xml:space="preserve">
-    <value>Personalizado</value>
+  <data name="PlaySourceButton" xml:space="preserve">
+    <value>播放來源影片</value>
   </data>
-  <data name="Anamorphic_Loose" xml:space="preserve">
-    <value>Loose</value>
+  <data name="EncodePreviewClipButton" xml:space="preserve">
+    <value>編碼預覽影片</value>
   </data>
-  <data name="Anamorphic_None" xml:space="preserve">
-    <value>Nenhum</value>
+  <data name="EncodePreviewClipToolTip" xml:space="preserve">
+    <value>使用目前的編碼設定將選擇的影片編碼為小段的預覽影片後播放。</value>
   </data>
-  <data name="Anamorphic_Strict" xml:space="preserve">
-    <value>Estrito</value>
+  <data name="GeneratingPreview" xml:space="preserve">
+    <value>產生預覽影片中...</value>
   </data>
-  <data name="Custom" xml:space="preserve">
-    <value>Personalizado</value>
+  <data name="PlaySourceDisabledBluRayToolTip" xml:space="preserve">
+    <value>目前尚未支援藍光影片的預覽功能。</value>
   </data>
-  <data name="Decomb_Bob" xml:space="preserve">
-    <value>Bob</value>
+  <data name="PlaySourceDisabledNoPlayerToolTip" xml:space="preserve">
+    <value>找不到支援的 DVD 播放器，請安裝 VLC 或 MPC-HC 以使用這個功能。</value>
   </data>
-  <data name="Decomb_Fast" xml:space="preserve">
-    <value>Rápido</value>
+  <data name="PlaySourceToolTip" xml:space="preserve">
+    <value>播放來源視訊。</value>
   </data>
-  <data name="Default" xml:space="preserve">
-    <value>Padrão</value>
+  <data name="PreviewClipGenerationFailedMessage" xml:space="preserve">
+    <value>預覽影片建立失敗，請參考記錄視窗中的詳細資訊。</value>
   </data>
-  <data name="Deinterlace_Bob" xml:space="preserve">
-    <value>Bob</value>
+  <data name="PreviewClipGenerationFailedTitle" xml:space="preserve">
+    <value>預覽影片建立失敗</value>
   </data>
-  <data name="Deinterlace_Fast" xml:space="preserve">
-    <value>Rápido</value>
+  <data name="PreviewWindowTitleSimple" xml:space="preserve">
+    <value>預覽: {0}x{1}</value>
   </data>
-  <data name="Deinterlace_Slow" xml:space="preserve">
-    <value>Lento</value>
+  <data name="PreviewWindowTitleComplex" xml:space="preserve">
+    <value>預覽: 顯示 {0}x{1} - 原始 {2}x{3}</value>
   </data>
-  <data name="Deinterlace_Slower" xml:space="preserve">
-    <value>Mais lento</value>
+  <data name="NoVideoSourceTitle" xml:space="preserve">
+    <value>預覽: 無視訊來源</value>
   </data>
-  <data name="Denoise_Medium" xml:space="preserve">
-    <value>Médio</value>
+  <data name="Seconds" xml:space="preserve">
+    <value>秒</value>
   </data>
-  <data name="Denoise_Strong" xml:space="preserve">
-    <value>Forte</value>
+  <data name="PreviewDisplay_Corners" xml:space="preserve">
+    <value>邊角檢視</value>
   </data>
-  <data name="Denoise_Weak" xml:space="preserve">
-    <value>Fraco</value>
+  <data name="PreviewDisplay_FitToWindow" xml:space="preserve">
+    <value>縮放至整個視窗</value>
   </data>
-  <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
-    <value>Não fazer nada</value>
+  <data name="PreviewDisplay_OneToOne" xml:space="preserve">
+    <value>1:1</value>
   </data>
-  <data name="EncodeCompleteActionType_EjectDisc" xml:space="preserve">
-    <value>Ejectar {0}:</value>
+  <data name="ViewLabel" xml:space="preserve">
+    <value>檢視:</value>
   </data>
-  <data name="EncodeCompleteActionType_LogOff" xml:space="preserve">
-    <value>Terminar Sessão</value>
+  <data name="TopMargin" xml:space="preserve">
+    <value>頂端</value>
   </data>
-  <data name="EncodeCompleteActionType_Shutdown" xml:space="preserve">
-    <value>Desligar PC</value>
+  <data name="LeftMargin" xml:space="preserve">
+    <value>左側</value>
   </data>
-  <data name="EncodeCompleteActionType_Sleep" xml:space="preserve">
-    <value>Suspender PC</value>
+  <data name="RightMargin" xml:space="preserve">
+    <value>右側</value>
   </data>
-  <data name="Off" xml:space="preserve">
-    <value>Desligado</value>
-  </data>
-  <data name="VideoRangeType_Chapters" xml:space="preserve">
-    <value>Capítulos</value>
-  </data>
-  <data name="VideoRangeType_Frames" xml:space="preserve">
-    <value>Frames</value>
-  </data>
-  <data name="VideoRangeType_Seconds" xml:space="preserve">
-    <value>Intervalo de tempo</value>
+  <data name="BottomMargin" xml:space="preserve">
+    <value>底部</value>
   </data>
 </root>
