--- a/VidCoder/Resources/QueueTitlesRes.zh.resx
+++ b/VidCoder/Resources/QueueTitlesRes.zh.resx
@@ -117,76 +117,40 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Anamorphic_Custom" xml:space="preserve">
-    <value>Personalizado</value>
+  <data name="OverrideTitleNumberToolTip" xml:space="preserve">
+    <value>選擇此選項時，將覆寫輸出檔名的編號順序。比方說原本的標題為 2、3、4，當以 7 覆寫時輸出檔將命名為 7、8、9，此功能在轉錄電視影集時很有幫助。</value>
   </data>
-  <data name="Anamorphic_Loose" xml:space="preserve">
-    <value>Loose</value>
+  <data name="QueueTitlesWindowHeader" xml:space="preserve">
+    <value>選擇多個章節標題以新增至工作佇列。</value>
   </data>
-  <data name="Anamorphic_None" xml:space="preserve">
-    <value>Nenhum</value>
+  <data name="PlaySourceToolTip" xml:space="preserve">
+    <value>若已安裝支援的播放器 (VLC 或 Media Player Classic Home Cinema)，可提供預覽 DVD 各章節標題的功能</value>
   </data>
-  <data name="Anamorphic_Strict" xml:space="preserve">
-    <value>Estrito</value>
+  <data name="PlaySourceButton" xml:space="preserve">
+    <value>播放來源影片</value>
   </data>
-  <data name="Custom" xml:space="preserve">
-    <value>Personalizado</value>
+  <data name="LengthRangePre" xml:space="preserve">
+    <value>所有章節標題</value>
+    <comment>Goes before the first number box in the length range specification.</comment>
   </data>
-  <data name="Decomb_Bob" xml:space="preserve">
-    <value>Bob</value>
+  <data name="LengthRangeMid" xml:space="preserve">
+    <value>至</value>
+    <comment>Goes in between the two number boxes in the length range specification.</comment>
   </data>
-  <data name="Decomb_Fast" xml:space="preserve">
-    <value>Rápido</value>
+  <data name="LengthRangePost" xml:space="preserve">
+    <value>分鐘</value>
+    <comment>Goes after the second number box in the length range specification.</comment>
   </data>
-  <data name="Default" xml:space="preserve">
-    <value>Padrão</value>
+  <data name="OverrideTitleCheckBox">
+    <value xml:space="preserve">覆寫標題 #: 起始於</value>
   </data>
-  <data name="Deinterlace_Bob" xml:space="preserve">
-    <value>Bob</value>
+  <data name="OverrideNameFormatCheckBox">
+    <value xml:space="preserve">覆寫命名格式:</value>
   </data>
-  <data name="Deinterlace_Fast" xml:space="preserve">
-    <value>Rápido</value>
+  <data name="QueueTitlesDialogTitle">
+    <value xml:space="preserve">新增多個章節標題至工作佇列</value>
   </data>
-  <data name="Deinterlace_Slow" xml:space="preserve">
-    <value>Lento</value>
-  </data>
-  <data name="Deinterlace_Slower" xml:space="preserve">
-    <value>Mais lento</value>
-  </data>
-  <data name="Denoise_Medium" xml:space="preserve">
-    <value>Médio</value>
-  </data>
-  <data name="Denoise_Strong" xml:space="preserve">
-    <value>Forte</value>
-  </data>
-  <data name="Denoise_Weak" xml:space="preserve">
-    <value>Fraco</value>
-  </data>
-  <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
-    <value>Não fazer nada</value>
-  </data>
-  <data name="EncodeCompleteActionType_EjectDisc" xml:space="preserve">
-    <value>Ejectar {0}:</value>
-  </data>
-  <data name="EncodeCompleteActionType_LogOff" xml:space="preserve">
-    <value>Terminar Sessão</value>
-  </data>
-  <data name="EncodeCompleteActionType_Shutdown" xml:space="preserve">
-    <value>Desligar PC</value>
-  </data>
-  <data name="EncodeCompleteActionType_Sleep" xml:space="preserve">
-    <value>Suspender PC</value>
-  </data>
-  <data name="Off" xml:space="preserve">
-    <value>Desligado</value>
-  </data>
-  <data name="VideoRangeType_Chapters" xml:space="preserve">
-    <value>Capítulos</value>
-  </data>
-  <data name="VideoRangeType_Frames" xml:space="preserve">
-    <value>Frames</value>
-  </data>
-  <data name="VideoRangeType_Seconds" xml:space="preserve">
-    <value>Intervalo de tempo</value>
+  <data name="TitleFormat">
+    <value xml:space="preserve">標題 {0}</value>
   </data>
 </root>
